z-index fix for earn page. attached event listeners to list-button to apply active state.

--- a/tapjoyads/public/stylesheets/sass/marketplace/theme/tjm/style.scss
+++ b/tapjoyads/public/stylesheets/sass/marketplace/theme/tjm/style.scss
@@ -811,6 +811,8 @@ div.ui-joy-button.facebook-btn {
   border-left: 1px solid #c8c4c4;
   border-right: 1px solid #c8c4c4;
   cursor: pointer;
+  position: relative;
+  z-index: 0;
   overflow: auto;
   font-size: 1.2em;
   .mod {
@@ -831,8 +833,9 @@ div.ui-joy-button.facebook-btn {
   border-bottom: 0;
 }
 
-.list-button-container .list-button:active {
+.list-button-container .list-button.active {
   box-shadow: inset 0 1px 1px rgba(0,0,0, .2), 0 1px 0 #fff;
+  -webkit-tap-highlight-color: rgba(0,0,0,.1);  
 }
 
 .list-button-container.flush .list-button {
@@ -908,6 +911,7 @@ div.ui-joy-button.facebook-btn {
   border: 1px solid #f0c36d;
   padding: 9px 12px 8px 12px;
   color: #222;
+  font-family: "Helvetica", arial;
   border-radius: 3px 3px 3px 3px;
   font-weight: bold;
   box-shadow: 0 1px 2px rgba(0,0,0, .1);
